# sete

./: '  .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  README.md  Session.vim  \  ]  cabal.project  sete.cabal
app/: Main.hs
app/Verse/: Art.hs  Atoms.hs  Conf.hs  Logic.hs  Pixel.hs  Plane.hs  Print.hs  Setup.hs  Sim.hs  State.hs  Types.hs  Unit.hs  Util.hs  Verse.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
test/: Main.hs
