cabal-version: 2.4
name: sete
version: 0.1.0.0

author: jrvieira
maintainer: github@jrvieira.com

extra-source-files: CHANGELOG.md

executable sete
   main-is: Main.hs
   ghc-options: -O2 -threaded -rtsopts -Wall

   -- Modules included in this executable, other than Main.
   other-modules: Zero.Zero
      , Zero.Color
      , Verse.Conf
      , Verse.Verse
      , Verse.Unit
      , Verse.Sim
      , Verse.Art
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
   build-depends: base
      , random
      , containers
   -- , ansi-terminal
   -- , vty
      , ansi-terminal-game == 1.8.0.0
   -- , brick
   -- , JuicyPixels
   -- , gloss
      , split
   hs-source-dirs: app
   default-language: Haskell2010
   default-extensions: BangPatterns
      , ImportQualifiedPost
      , TupleSections
      , GADTs
      , StandaloneDeriving
      , ScopedTypeVariables
      , BinaryLiterals
   -- , GeneralizedNewtypeDeriving
      , LexicalNegation
   -- , OverloadedLists
   -- , OverloadedStrings
      , TypeApplications
      , PartialTypeSignatures
