cabal-version: 3.4
name: sete
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: jrvieira
maintainer: github@jrvieira.com
build-type: Simple
extra-doc-files: CHANGELOG.md
-- extra-source-files:

common warnings
   ghc-options: -Wall -threaded

executable sete
   import: warnings
   main-is: Main.hs
   other-modules: Verse.Setup
      -- geometry model
      , Verse.Verse
      -- program state
      , Verse.State
      -- control interaction + step simulation
      , Verse.Logic
      -- display art
      , Verse.Pixel

   -- other-extensions:
   build-depends: base ^>=4.18.0.0
      , Zero
      , ansi-terminal-game
      , containers
      , colour
   hs-source-dirs: app
   default-language: GHC2021
